manufacturer fix in UDDF and some cleanup
Former-commit-id: 07f0c361c2c547f5af20ee2ca8586dcca6ee444d

--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,7 @@
             <groupId>de.frobese.jtrak</groupId>
             <artifactId>jtrak</artifactId>
             <version>1.2.4</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
@@ -225,12 +225,6 @@
                     <licenseResolver>${project.baseUri}/src/license</licenseResolver>
                 </configuration>
                 <executions>
-                    <execution>
-                        <id>download-licenses</id>
-                        <goals>
-                            <goal>download-licenses</goal>
-                        </goals>
-                    </execution>
                     <execution>
                         <id>update-file-headers</id>
                         <goals>
