--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
         </license>
     </licenses>
     <organization>
-        <name>Grajagan Org.</name>
-        <url>http://www.grajagan.org</url>
+        <name>Helge Weissig</name>
+        <url>https://github.com/helgew/jtrak2xml</url>
     </organization>
     <developers>
         <developer>
